--- a/Idle Factory/HUD/HUD Actions/SettingsScene/Settings.storyboard
+++ b/Idle Factory/HUD/HUD Actions/SettingsScene/Settings.storyboard
@@ -18,7 +18,7 @@
         <!--Settings View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="SettingsViewController" customModule="Idle_Factory" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="GameSettingsScene" id="Y6W-OH-hqX" customClass="SettingsViewController" customModule="Idle_Factory" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="926" height="428"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -34,7 +34,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Sound effects" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zQ9-ke-i0M">
-                                <rect key="frame" x="303" y="191.66666666666666" width="148" height="24"/>
+                                <rect key="frame" x="302" y="191.66666666666666" width="149" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="WBA-eP-4Mc"/>
                                 </constraints>
@@ -110,7 +110,7 @@
                                 </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Song" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aAX-H7-jZG">
-                                <rect key="frame" x="397" y="131" width="54" height="24"/>
+                                <rect key="frame" x="394.33333333333331" y="131" width="56.666666666666686" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="NFW-gc-D19"/>
                                 </constraints>
@@ -119,7 +119,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Marcelo Diefenbach" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vv4-ZD-Maa">
-                                <rect key="frame" x="475" y="253" width="213" height="24"/>
+                                <rect key="frame" x="475" y="253" width="215" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="EaG-dj-GuH"/>
                                 </constraints>
@@ -144,7 +144,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Q4-dW-JJl">
-                                <rect key="frame" x="389" y="253" width="62" height="24"/>
+                                <rect key="frame" x="387.33333333333331" y="253" width="63.666666666666686" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="Aqr-EX-X67"/>
                                 </constraints>
@@ -207,10 +207,10 @@
                                 <rect key="frame" x="104.33333333333331" y="43.333333333333343" width="717.33333333333348" height="320.33333333333326"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="center" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="bLn-Xc-Oxt">
-                                        <rect key="frame" x="227" y="80" width="264" height="160"/>
+                                        <rect key="frame" x="227" y="80" width="264" height="178"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Limpar os dados pessoais vai alterar o seu nome de usuário, deseja continuar?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJ5-5k-21F">
-                                                <rect key="frame" x="0.0" y="0.0" width="264" height="108"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="264" height="126"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="264" id="gwK-eT-dWG"/>
                                                 </constraints>
@@ -219,7 +219,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="I7k-BZ-fdD">
-                                                <rect key="frame" x="25.666666666666686" y="136.00000000000003" width="213" height="24"/>
+                                                <rect key="frame" x="25.666666666666686" y="154.00000000000003" width="213" height="24"/>
                                                 <subviews>
                                                     <button opaque="NO" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Me1-48-ffL">
                                                         <rect key="frame" x="0.0" y="0.0" width="100" height="24"/>
