--- a/Idle Factory/FactoryDetails/FactoryDetailScene.storyboard
+++ b/Idle Factory/FactoryDetails/FactoryDetailScene.storyboard
@@ -55,8 +55,8 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="290" height="40"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back" translatesAutoresizingMaskIntoConstraints="NO" id="xPC-09-vaa">
-                                                            <rect key="frame" x="5" y="5" width="24" height="30"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="xPC-09-vaa">
+                                                            <rect key="frame" x="5" y="5.5" width="24" height="29"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="24" id="ie2-QW-orU"/>
                                                                 <constraint firstAttribute="width" constant="24" id="whk-RK-yZc"/>
@@ -303,6 +303,7 @@
         <image name="Money_premium" width="46" height="43"/>
         <image name="back" width="31.5" height="31"/>
         <image name="close" width="31.5" height="31"/>
+        <image name="pencil.circle" catalog="system" width="128" height="121"/>
         <namedColor name="Marketplace_background">
             <color red="0.63899999856948853" green="0.63899999856948853" blue="0.63899999856948853" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
