--- a/Idle Factory/HUD/HUD Actions Scenes/GameMarketplaceScene/GameMarketplaceScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions Scenes/GameMarketplaceScene/GameMarketplaceScene.storyboard
@@ -175,6 +175,9 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="auJ-6b-ZqW">
                                                     <rect key="frame" x="0.0" y="0.0" width="131" height="185"/>
                                                     <subviews>
+                                                        <skView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bAn-mb-2hG">
+                                                            <rect key="frame" x="8" y="8" width="115" height="110"/>
+                                                        </skView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="XBS-CF-vpz">
                                                             <rect key="frame" x="25" y="123" width="81" height="15"/>
                                                             <subviews>
@@ -231,9 +234,6 @@
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
-                                                        <skView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bAn-mb-2hG">
-                                                            <rect key="frame" x="8" y="8" width="115" height="110"/>
-                                                        </skView>
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <constraints>
@@ -421,7 +421,7 @@
                                 </connections>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YgV-Dj-bDE">
-                                <rect key="frame" x="59" y="135" width="793" height="228"/>
+                                <rect key="frame" x="44" y="135" width="852" height="228"/>
                                 <color key="backgroundColor" name="Marketplace_background"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zkK-Tp-u9Q">
                                     <size key="itemSize" width="131" height="201"/>
@@ -431,17 +431,20 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="announceFactory_cell" id="4cU-kW-R5j" customClass="GameAnnounceViewCell" customModule="Idle_Factory" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="14.5" width="131" height="199"/>
+                                        <rect key="frame" x="0.0" y="13.5" width="131" height="201"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="iNn-j3-cs2">
-                                            <rect key="frame" x="0.0" y="0.0" width="131" height="199"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="131" height="201"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B1D-Pg-ZWi">
-                                                    <rect key="frame" x="0.0" y="0.0" width="131" height="183"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="131" height="185"/>
                                                     <subviews>
+                                                        <skView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2pV-BJ-xfq">
+                                                            <rect key="frame" x="8" y="8" width="115" height="110"/>
+                                                        </skView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="uwc-AH-6Hz">
-                                                            <rect key="frame" x="25" y="121" width="81" height="15"/>
+                                                            <rect key="frame" x="25" y="123" width="81" height="15"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4k.tv" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="D03-vU-vwM">
                                                                     <rect key="frame" x="0.0" y="0.5" width="12.5" height="14"/>
@@ -478,8 +481,8 @@
                                                                 <constraint firstAttribute="height" constant="15" id="RhZ-Nk-bx9"/>
                                                             </constraints>
                                                         </stackView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="9xR-Cu-AyN">
-                                                            <rect key="frame" x="17" y="149" width="101" height="18"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="9xR-Cu-AyN">
+                                                            <rect key="frame" x="20" y="151" width="91" height="18"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Coin" translatesAutoresizingMaskIntoConstraints="NO" id="Vmd-30-UdV">
                                                                     <rect key="frame" x="0.0" y="0.0" width="26" height="18"/>
@@ -489,38 +492,33 @@
                                                                     </constraints>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ca5-qK-bRf">
-                                                                    <rect key="frame" x="26" y="0.5" width="75" height="17"/>
+                                                                    <rect key="frame" x="31" y="0.5" width="60" height="17"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lok-9A-i0x">
-                                                            <rect key="frame" x="33.5" y="40" width="64" height="64"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="64" id="Obd-zu-qKt"/>
-                                                                <constraint firstAttribute="width" secondItem="lok-9A-i0x" secondAttribute="height" multiplier="1:1" id="uc7-MI-39j"/>
-                                                            </constraints>
-                                                        </imageView>
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstItem="uwc-AH-6Hz" firstAttribute="top" secondItem="lok-9A-i0x" secondAttribute="bottom" constant="17" id="3ay-v5-CkD"/>
-                                                        <constraint firstAttribute="trailing" secondItem="9xR-Cu-AyN" secondAttribute="trailing" constant="13" id="Bgq-8P-1qS"/>
+                                                        <constraint firstItem="9xR-Cu-AyN" firstAttribute="centerX" secondItem="B1D-Pg-ZWi" secondAttribute="centerX" id="5FT-VW-AF8"/>
+                                                        <constraint firstAttribute="trailing" secondItem="9xR-Cu-AyN" secondAttribute="trailing" constant="20" id="Bgq-8P-1qS"/>
+                                                        <constraint firstItem="2pV-BJ-xfq" firstAttribute="top" secondItem="B1D-Pg-ZWi" secondAttribute="top" constant="8" id="CaG-ij-LKq"/>
+                                                        <constraint firstItem="uwc-AH-6Hz" firstAttribute="top" secondItem="2pV-BJ-xfq" secondAttribute="bottom" constant="5" id="IIO-qJ-q4B"/>
                                                         <constraint firstItem="uwc-AH-6Hz" firstAttribute="centerX" secondItem="B1D-Pg-ZWi" secondAttribute="centerX" id="JSP-HZ-dHc"/>
                                                         <constraint firstAttribute="bottom" secondItem="9xR-Cu-AyN" secondAttribute="bottom" constant="16" id="KXm-oJ-a43"/>
                                                         <constraint firstItem="9xR-Cu-AyN" firstAttribute="top" secondItem="uwc-AH-6Hz" secondAttribute="bottom" constant="13" id="Nle-ig-ABd"/>
-                                                        <constraint firstItem="9xR-Cu-AyN" firstAttribute="leading" secondItem="B1D-Pg-ZWi" secondAttribute="leading" constant="17" id="UO2-CK-h4X"/>
-                                                        <constraint firstItem="lok-9A-i0x" firstAttribute="centerX" secondItem="B1D-Pg-ZWi" secondAttribute="centerX" id="aqe-1w-zaY"/>
+                                                        <constraint firstItem="9xR-Cu-AyN" firstAttribute="leading" secondItem="B1D-Pg-ZWi" secondAttribute="leading" constant="20" id="UO2-CK-h4X"/>
+                                                        <constraint firstItem="2pV-BJ-xfq" firstAttribute="leading" secondItem="B1D-Pg-ZWi" secondAttribute="leading" constant="8" id="h6Z-GW-1Dz"/>
                                                         <constraint firstItem="uwc-AH-6Hz" firstAttribute="leading" secondItem="B1D-Pg-ZWi" secondAttribute="leading" constant="25" id="jSR-kk-qAT"/>
-                                                        <constraint firstItem="lok-9A-i0x" firstAttribute="top" secondItem="B1D-Pg-ZWi" secondAttribute="top" constant="40" id="qrz-PS-qxC"/>
                                                         <constraint firstAttribute="trailing" secondItem="uwc-AH-6Hz" secondAttribute="trailing" constant="25" id="rxK-vL-SfK"/>
+                                                        <constraint firstAttribute="trailing" secondItem="2pV-BJ-xfq" secondAttribute="trailing" constant="8" id="u5k-iH-zex"/>
                                                     </constraints>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bzl-o8-j0O">
-                                                    <rect key="frame" x="22" y="173" width="87" height="21"/>
-                                                    <color key="backgroundColor" name="Inventory_background"/>
+                                                    <rect key="frame" x="22" y="175" width="87" height="21"/>
+                                                    <color key="backgroundColor" name="actionColor1"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="87" id="Z21-RG-pWb"/>
                                                         <constraint firstAttribute="height" constant="21" id="yCl-yY-ze0"/>
@@ -544,7 +542,7 @@
                                         <connections>
                                             <outlet property="cardView" destination="B1D-Pg-ZWi" id="Brg-AY-XoV"/>
                                             <outlet property="coinImage" destination="Vmd-30-UdV" id="4uX-Fz-GCu"/>
-                                            <outlet property="generatorImage" destination="lok-9A-i0x" id="EMF-sQ-cfF"/>
+                                            <outlet property="generatorImage" destination="2pV-BJ-xfq" id="lqz-ew-Msq"/>
                                             <outlet property="priceLabel" destination="ca5-qK-bRf" id="K81-99-YGb"/>
                                             <outlet property="resourceQuantityType1" destination="YzL-3Q-Z2g" id="Uus-N5-KXQ"/>
                                             <outlet property="resourceQuantityType2" destination="i2A-ng-B1a" id="wWP-eO-esW"/>
@@ -562,9 +560,9 @@
                         <color key="backgroundColor" name="Marketplace_background"/>
                         <constraints>
                             <constraint firstItem="uUL-tu-Vgi" firstAttribute="top" secondItem="v0y-Qd-Mdh" secondAttribute="top" constant="45" id="9IB-K3-dEk"/>
-                            <constraint firstItem="YgV-Dj-bDE" firstAttribute="trailing" secondItem="v0y-Qd-Mdh" secondAttribute="trailing" id="BrU-Fb-CnN"/>
+                            <constraint firstItem="YgV-Dj-bDE" firstAttribute="trailing" secondItem="D9q-YL-Ycv" secondAttribute="trailing" id="BrU-Fb-CnN"/>
                             <constraint firstItem="v0y-Qd-Mdh" firstAttribute="bottom" secondItem="YgV-Dj-bDE" secondAttribute="bottom" constant="30" id="K1A-Vh-Ztc"/>
-                            <constraint firstItem="YgV-Dj-bDE" firstAttribute="leading" secondItem="v0y-Qd-Mdh" secondAttribute="leading" constant="15" id="Wh6-fY-BkP"/>
+                            <constraint firstItem="YgV-Dj-bDE" firstAttribute="leading" secondItem="v0y-Qd-Mdh" secondAttribute="leading" id="Wh6-fY-BkP"/>
                             <constraint firstItem="pxO-EI-DEX" firstAttribute="top" secondItem="v0y-Qd-Mdh" secondAttribute="top" constant="52" id="cJS-04-GUI"/>
                             <constraint firstItem="pxO-EI-DEX" firstAttribute="leading" secondItem="v0y-Qd-Mdh" secondAttribute="leading" constant="20" id="fq1-ux-c55"/>
                             <constraint firstItem="YgV-Dj-bDE" firstAttribute="top" secondItem="pxO-EI-DEX" secondAttribute="bottom" constant="52" id="obR-uY-uVy"/>
@@ -582,7 +580,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0HB-Kk-KBc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="984" y="-133"/>
+            <point key="canvasLocation" x="831" y="100"/>
         </scene>
     </scenes>
     <resources>
@@ -593,9 +591,6 @@
         <image name="back" width="31.5" height="31"/>
         <image name="close" width="31.5" height="31"/>
         <image name="tv" catalog="system" width="128" height="97"/>
-        <namedColor name="Inventory_background">
-            <color red="0.77999997138977051" green="0.16500000655651093" blue="0.23100000619888306" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="Marketplace_background">
             <color red="0.63899999856948853" green="0.63899999856948853" blue="0.63899999856948853" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
